<resources>
    <string name="app_name">Good Idea Note</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="idea_title_hint">Essence of the idea</string>
    <string name="idea_desc_hint">Description</string>
    <string name="add_idea_btn_text">Remember Idea</string>
    <string name="idea_purpose_label">Idea for :</string>
    <string name="menu_delete_label">Delete idea</string>
    <string name="delete_confirmation_question">Are you sure you want to delete this idea?</string>
    <string name="delete_confirmation_yes">Yes</string>
    <string name="delete_confirmation_no">No</string>
    <string name="purpose_home_label">Home</string>
    <string name="purpose_work_label">Work</string>
    <string name="purpose_skill_label">Skills</string>
    <string name="settings_skill_key">skills</string>
    <string name="settings_home_key">home</string>
    <string name="settings_work_key">work</string>
    <string name="settings_database_key">database</string>
</resources>