<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".idea_new.NewIdeaFragment">


        <EditText
            android:id="@+id/new_idea_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/idea_title_hint"
            android:inputType="text"
            android:maxLength="100"
            android:maxLines="1"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill">

            <requestFocus />
        </EditText>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/new_idea_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/yellowVivid"
            android:orientation="vertical"
            android:padding="4dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_idea_title"
            app:rippleColor="@android:color/transparent"
            app:strokeColor="#C4424242"
            app:strokeWidth="1dp">

            <EditText
                android:id="@+id/new_idea_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/clear"
                android:textSize="18sp"
                android:gravity="start|top"
                android:hint="@string/idea_desc_hint"
                android:inputType="textMultiLine"
                android:maxLength="1000"
                android:maxLines="100"
                android:minLines="3"
                android:padding="8dp"
                android:singleLine="false"
                android:textAppearance="?textAppearanceListItem"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_idea_title"
                tools:ignore="Autofill" />

        </com.google.android.material.card.MaterialCardView>


        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_purpose"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTintMode="add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/new_idea_card"
            tools:listitem="@layout/card_spinner_simple_purpose" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/add_idea_btn_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_purpose" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idea_purpose_label"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/spinner_purpose"
            app:layout_constraintEnd_toStartOf="@+id/spinner_purpose"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/spinner_purpose" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>